bug fix on ios

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
   background-color: blue;
   color: white;
   padding: 10px 20px;
-  font-size: 36px;
+  font-size: 18px;
   border: none;
   cursor: pointer;
 }
